fix: patch login page position Previously, the elements were not exactly centered on the screen due to a padding left in the CSS. Now, they are correctly aligned.

--- a/styles/login.css
+++ b/styles/login.css
@@ -1,6 +1,11 @@
 body{
     font-family: sans-serif;
     background-color: #01257d;
+    margin: 0%;
+    font-family: Inter;
+    max-width: 100%;
+    overflow-x: hidden;
+    height: 100%;
 }
 
 main{
@@ -17,7 +22,6 @@ main{
     align-items: center;
     padding-top: 60px;
     font-size: 35px;
-    padding-left: 50px;
 }
 
 h1{
@@ -35,7 +39,6 @@ h1{
     display: flex;
     flex-direction: column;
     gap: 10px;
-    padding-left: 60px;
 }
 
 div input{
